--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
+    "i18next": "^21.10.0",
+    "i18next-browser-languagedetector": "^6.1.8",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
+    "react-i18next": "^11.18.6",
     "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
     "swiper": "^11.2.10",
