--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-i18next": "^11.18.6",
     "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "swiper": "^11.2.10",
     "web-vitals": "^2.1.4"
   },
